--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- ✅ THIS IS REQUIRED -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -13,8 +14,9 @@
     </parent>
 
     <groupId>com.example</groupId>
-    <artifactId>dynamic-event-ticket-pricing-engine-demo</artifactId>
+    <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <name>demo</name>
 
     <properties>
         <java.version>17</java.version>
