--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,39 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+# ===============================
+# Application Configuration
+# ===============================
+spring.application.name=demo
+
+# ===============================
+# Server Configuration
+# ===============================
+server.port=9001
+
+# ===============================
+# Database Configuration (MySQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-springdoc.swagger-ui.path=/swagger-ui/index.html
+# ===============================
+# OpenAPI / Swagger Configuration
+# ===============================
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# ===============================
+# Logging Configuration
+# ===============================
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
