--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 springdoc.swagger-ui.path=/swagger-ui.html
