--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,11 @@
-# ===============================
-# SERVER
-# ===============================
-server.port=9001
-
-# ===============================
-# H2 DATABASE CONFIG
-# ===============================
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
 spring.datasource.username=root
-spring.datasource.password=Amypo
+spring.datasource.password=your_password
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# ===============================
-# H2 CONSOLE
-# ===============================
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# ===============================
-# SWAGGER
-# ===============================
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.api-docs.path=/v3/api-docs
+server.port=9001
