--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,26 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db
-spring.datasource.username=root
-spring.datasource.password=your_password
+# ===============================
+# SERVER CONFIG
+# ===============================
+server.port=9001
 
+# ===============================
+# DATASOURCE CONFIG (MYSQL)
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=your_mysql_password
+
+# IMPORTANT (OPTIONAL but SAFE)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# ===============================
+# JPA / HIBERNATE
+# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-server.port=9001
+# ===============================
+# SQL INIT (DISABLE SCRIPT AUTO RUN)
+# ===============================
+spring.sql.init.mode=never
