--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=9001
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=your_mysql_password
+spring.datasource.password=Aympo
 
 # IMPORTANT (OPTIONAL but SAFE)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
