--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 # ===============================
 # SERVER CONFIG
 # ===============================
-server.port=9001
+server.port=9003
 
 # ===============================
 # DATASOURCE CONFIG (MYSQL)
 # ===============================
 spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Aympo
+spring.datasource.password=Amypo
 
 # IMPORTANT (OPTIONAL but SAFE)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
