--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,15 @@
-# ===============================
-# SERVER CONFIG
-# ===============================
-server.port=9003
+spring.application.name=demo
+# Don't change the port
+server.port = 9001
+# for https
+server.forward-headers-strategy=framework
 
-# ===============================
-# DATASOURCE CONFIG (MYSQL)
-# ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/transport_pro?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Amypo
-
-# IMPORTANT (OPTIONAL but SAFE)
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ===============================
-# JPA / HIBERNATE
-# ===============================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# ===============================
-# SQL INIT (DISABLE SCRIPT AUTO RUN)
-# ===============================
-spring.sql.init.mode=never
+spring.jpa.properties-hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
