--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,50 +1,15 @@
-# ==================================================
-# APPLICATION
-# ==================================================
 spring.application.name=demo
+# Don't change the port
+server.port = 9002
+# for https
+server.forward-headers-strategy=framework
 
-# ==================================================
-# SERVER CONFIG
-# ==================================================
-server.port=9001
-
-# ==================================================
-# DATASOURCE CONFIG (MySQL)
-# ==================================================
-spring.datasource.url=jdbc:mysql://localhost:3306/demo_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/transport_pro?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=your_mysql_password
-
-# Optional but safe (Boot can auto-detect)
+spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# ==================================================
-# JPA / HIBERNATE
-# ==================================================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.open-in-view=false
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# ==================================================
-# SQL INITIALIZATION
-# ==================================================
-spring.sql.init.mode=never
-
-# ==================================================
-# SWAGGER / OPENAPI
-# ==================================================
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-springdoc.swagger-ui.server-url=http://localhost:9001
-
-# ==================================================
-# LOGGING (OPTIONAL)
-# ==================================================
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
-
-# ==================================================
-# JACKSON (OPTIONAL)
-# ==================================================
-spring.jackson.serialization.indent_output=true
+spring.jpa.properties-hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
