--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,21 @@
             <version>5.8.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- JPA (needed for @Entity, @Id, etc.) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        
+        <!-- Swagger / OpenAPI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
