--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
     <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
     <version>2.2.0</version>
 </dependency>
+<dependency>
+    <groupId>org.springdoc</groupId>
+    <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+    <version>2.8.14</version>
+</dependency>
+
 
 
         <dependency>
