--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,19 @@
-# Application name
-spring.application.name=demo
+# Server port
+server.port=8080
 
-# Server settings
-server.port=9002
-server.forward-headers-strategy=framework
-
-# H2 in-memory database
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# H2 Console
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # JPA/Hibernate
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# H2 console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# Swagger/OpenAPI
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
