--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
             <version>0.5.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- Swagger / OpenAPI for Spring Boot 3 -->
+        <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+                <version>2.5.0</version>
+            </dependency>
+
 
         <!-- Jakarta Servlet API (HelloServlet tests) -->
         <dependency>
