--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,26 @@
-# Server port
+# ===============================
+# SERVER
+# ===============================
 server.port=9002
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-# JPA/Hibernate
+# ===============================
+# DATASOURCE (H2 / MySQL – adjust if needed)
+# ===============================
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
+# ===============================
+# JPA / HIBERNATE (CRITICAL)
+# ===============================
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-# Swagger/OpenAPI
-springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# H2 CONSOLE
+# ===============================
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
