--- a/pom.xml
+++ b/pom.xml
@@ -45,8 +45,10 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+            <version>8.0.33</version> <!-- stable version available on Maven Central -->
         </dependency>
+
+
 
         <!-- JWT -->
         <dependency>
