--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@
 server.port=9002
 
 # ===============================
-# DATASOURCE (H2 / MySQL – adjust if needed)
+# DATASOURCE (H2 - IN MEMORY)
 # ===============================
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 # ===============================
-# JPA / HIBERNATE (CRITICAL)
+# JPA / HIBERNATE
 # ===============================
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -25,17 +25,14 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/dynamic_pricing_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=yourpassword
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
-# JWT Secret
+# ===============================
+# JWT
+# ===============================
 jwt.secret=MySuperSecretKey
 jwt.validity=3600000
 
-# Swagger
+# ===============================
+# SWAGGER
+# ===============================
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui/index.html
